# agent-quality-benchmark

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  container-scan.yml
apps/web/: Dockerfile  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: app-shell.tsx  charts.tsx  compare-view.tsx  dashboard.tsx  new-run-wizard.tsx  providers.tsx  run-explorer.tsx
apps/web/lib/: api.ts  demo-data.ts  format.ts  types.ts
apps/web/tests/: format.test.ts  settings.test.tsx
benchmark-packs/starter/: core.yaml
docs/: acceptance-criteria.md  architecture.md  benchmark-methodology.md  final-setup-todo.md  implementation-report.md  lighthouse-accessibility.json  protocol.md
services/api/: Dockerfile  entrypoint.sh
services/api/alembic/: env.py
services/api/aqb_api/: __init__.py  api_models.py  db.py  main.py  security.py  services.py  settings.py  tables.py
services/worker/: Dockerfile
services/worker/aqb_worker/: __init__.py  celery_app.py  tasks.py
tests/: test_api_workflows.py  test_live_adapters.py  test_metrics_scoring.py  test_otel.py  test_runner.py  test_security_uploads.py  test_stats.py
(+10 files in other folders)
