[project]
name = "agent-quality-benchmark"
version = "0.1.0"
description = "A reproducible, evidence-first quality benchmark for AI agents"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.14,<2",
  "celery[redis]>=5.4,<6",
  "cryptography>=48.0.1,<49",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "jinja2>=3.1,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "psycopg[binary]>=3.2,<4",
  "python-multipart>=0.0.20,<1",
  "pyyaml>=6.0,<7",
  "redis>=5.2,<9",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1"
]

[dependency-groups]
dev = [
  "mypy>=1.14,<2",
  "pip-audit>=2.8,<3",
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.3,<2",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
  "types-PyYAML>=6.0.12"
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]
pythonpath = ["packages/eval-core", "services/api", "services/worker"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["E501", "B008", "S101"] # Formatter wraps; Depends/File are FastAPI markers.

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["services/api/alembic"]

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true
